.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
15:12:49 **** Incremental Build of configuration Debug for project Bit Shifting ****
make all 
Building file: ../src/Main.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Main.d" -MT"src/Main.o" -o "src/Main.o" "../src/Main.cpp"
../src/Main.cpp:17:9: error: expected expression
        color =<< 8;
               ^
1 error generated.
make: *** [src/Main.o] Error 1
